fix(web): fix path for splash screen logo

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -71,7 +71,7 @@ body {
   .logo {
     width: 200px;
     height: 200px;
-    background-image: url(assets/images/logo_splash.png);
+    background-image: url(../assets/images/logo_splash.png);
     background-position: 50% 50%;
     background-repeat: no-repeat;
   }
