refactor+fix+feat(web): rewrite dialog store and activity store, refactor come components, use bindings only from action creators, small style fixes, cleanup code and style, fix typo in members plural in english.

--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -24,6 +24,14 @@ $like-red: rgb(226, 38, 77);
 
 .dialog {
   position: relative;
+  &__footer {
+    height: 182px;
+    h3 {
+      font-weight: 500;
+
+      color: rgba(0, 0, 0, .2);
+    }
+  }
   &--empty {
     .advice {
       max-width: 480px;
