feat+refactor(web): select contacts in people modal with keyboard, rename this modal component and refactor people store.

--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -1310,7 +1310,7 @@
     .contacts__list {
       &__item {
         list-style: none;
-        &:hover {
+        &--active {
           font-weight: 500;
 
           cursor: pointer;
