--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -22,6 +22,15 @@ $like-red: rgb(226, 38, 77);
   }
 }
 
+@keyframes move {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 16px 16px;
+  }
+}
+
 .dialog {
   position: relative;
   &__footer {
@@ -868,6 +877,19 @@ $like-red: rgb(226, 38, 77);
         transition: width 100ms ease-in;
 
         background-color: $dark-sky-blue;
+      }
+      &--loading {
+        cursor: default !important;
+        background-color: rgba(0, 0, 0, .01);
+        &:after{
+          content: '';
+          display: block;
+          width: 100%;
+          height: 100%;
+          animation: move 1s linear infinite;
+          background-size: 16px 16px;
+          background-image: linear-gradient(-45deg, rgba($dark-sky-blue, .2) 25%, transparent 25%, transparent 50%, rgba($dark-sky-blue, .2) 50%, rgba($dark-sky-blue, .2) 75%, transparent 75%, transparent 100%);
+        }
       }
     }
   }
