--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -967,6 +967,18 @@ $maximum-image-height: 400px;
       height: 100px;
     }
   }
+  .modern {
+    font-size: 15px;
+    &--paragraph {
+      border-radius: 0 3px 3px 0;
+      border-left: 6px solid transparent;
+    }
+
+    p {
+      margin: 0;
+      padding: 8px;
+    }
+  }
 }
 
 .date-divider {
