feat(web): update call modal, add new call states

--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -684,7 +684,8 @@
     }
 
     .modal-new__body {
-      padding: 0;
+      //padding: 0;
+      text-align: center;
     }
 
     .modal-new__footer {
