--- a/src/styles/modals.scss
+++ b/src/styles/modals.scss
@@ -677,15 +677,23 @@
         font-size: 16px;
         font-weight: 500;
         line-height: 20px;
-        text-transform: uppercase;
 
         color: $modal-text-color;
       }
     }
 
     .modal-new__body {
-      //padding: 0;
+      padding: 16px 0;
       text-align: center;
+      .avatar {
+        margin-bottom: 16px;
+      }
+      .caller-name {
+        margin: 0;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 24px;
+      }
     }
 
     .modal-new__footer {
