--- a/src/styles/scrollbars.scss
+++ b/src/styles/scrollbars.scss
@@ -21,7 +21,7 @@ $default-scrollbar-color: $pigeon-post;
 
     width: 100%;
     height: 100%;
-    .ss-content {
+    .ss-scrollarea {
       position: relative;
 
       overflow: auto;
