--- a/src/styles/forms.scss
+++ b/src/styles/forms.scss
@@ -231,6 +231,9 @@
   &__material {
     font-size: 15px;
     line-height: 18px;
+
+    position: relative;
+
     @mixin focused-label() {
       cursor: default;
       transform: translateY(0) scale(.8) !important;
@@ -251,13 +254,28 @@
     input {
       margin: 0;
       padding: 4px 0;
-
       //transition: box-shadow 250ms cubic-bezier(.23, 1, .32, 1) 0ms;
 
       border: none;
       outline: none;
       background-color: transparent;
       box-shadow: 0 1px 0 0 rgba(black, .3);
+    }
+    .error {
+      font-size: 14px;
+      line-height: 20px;
+
+      position: absolute;
+      top: 48px;
+      left: 0;
+
+      display: none;
+
+      width: 100%;
+
+      text-align: left;
+
+      color: $coral;
     }
 
     &--focus {
@@ -286,12 +304,22 @@
       border-bottom: 1px dotted rgba(black, .5);
 
       label {
-        @include focused-label();
         color: rgba(black, .5);
+
+        @include focused-label();
       }
       input {
-        @include no-select();
         box-shadow: none;
+
+        @include no-select();
+      }
+    }
+    &--with-error {
+      input {
+        box-shadow: 0 2px 0 0 $coral !important;
+      }
+      .error {
+        display: block;
       }
     }
   }
