feat(web): add archive component with styles

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -51,6 +51,7 @@ body {
     flex-direction: row;
 
     flex: 1;
+    position: relative;
     .dialog {
       display: flex;
       flex-direction: column;
