--- a/src/styles/responsive.scss
+++ b/src/styles/responsive.scss
@@ -7,7 +7,7 @@
     .activity {
       position: absolute;
       right: 0;
-      top: $toolbar-height;
+      top: 0;
       bottom: 0;
     }
   }
