--- a/src/styles/archive.scss
+++ b/src/styles/archive.scss
@@ -9,21 +9,35 @@
   width: 100%;
 
   .preloader {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    background-color: white;
-    display: block;
-
+    background-color: transparent;
+    width: auto;
+    height: auto;
+    border-radius: 0;
+    & > div {
+      width: 4px;
+      background-color: $dark-sky-blue;
+    }
   }
 
   &__list {
     padding: 8px;
     &__item {
       padding: 8px;
+      &--loading {
+        text-align: center;
+        padding: 16px;
+      }
+      &--empty {
+        text-align: center;
+        h3 {
+          font-weight: 500;
+          font-size: 24px;
+          color: $dove-gray;
+        }
+      }
     }
+
+
   }
 
   .archive-item {
