--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -17,6 +17,7 @@
   box-sizing: border-box;
   height: 36px;
   padding: 8px 16px;
+  text-decoration: none !important;
 
   cursor: pointer;
   transition: box-shadow 200ms, background 200ms;
@@ -115,7 +116,14 @@
     }
 
   }
-
+  &--outline {
+    box-shadow: inset 0 0 0 2px rgba(white, .3);
+    color: white;
+    border-radius: 3px;
+    &:hover {
+      box-shadow: inset 0 0 0 2px rgba(white, .6);
+    }
+  }
   &--icon {
     line-height: 1px;
 
