--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -109,8 +109,12 @@
       a {
         cursor: pointer;
         transition: 200ms;
+        border-bottom: 1px dotted rgba(white, .6);
+        line-height: 16px;
+        display: inline-block;
         &:hover {
           color: white;
+          border-bottom: 1px dotted white;
         }
       }
 
@@ -269,6 +273,41 @@
         line-height: 32px;
       }
     }
+    &--empty {
+      // min-height: 100px;
+      @include no-select();
+      .sidebar__list__item {
+        text-align: center;
+        padding: 16px;
+        cursor: default;
+        font-weight: 400;
+        position: relative;
+        .stem {
+          position: absolute;
+          right: 20px;
+          top: 6px;
+          height: 20px;
+          overflow: hidden;
+          transform: rotate(160deg);
+          width: 24px;
+          &:after {
+            content: '';
+            display: block;
+            width: 50px;
+            height: 50px;
+            border: 1px solid rgba(white, .6);
+            border-radius: 360px;
+          }
+        }
+        .button {
+          margin-top: 14px;
+        }
+        &:hover {
+          color: rgba(white, 0.6);
+          background-color: transparent;
+        }
+      }
+    }
   }
 
   &__recent {
@@ -341,6 +380,10 @@
           top: 0;
         }
       }
+    }
+
+    footer {
+      padding: 0 16px 16px;
     }
   }
 
