--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -228,7 +228,7 @@
           filter: none;
         }
         .counter {
-          display: none;
+          // display: none;
         }
         .archive,
         .delete,
