--- a/src/styles/call.scss
+++ b/src/styles/call.scss
@@ -1,7 +1,7 @@
 $ring-size: 120px;
 $ring-step: 20px;
 
-@keyframes scale {
+@keyframes scalePulse {
   0% {
     transform: scale(1);
   }
@@ -46,8 +46,6 @@ $ring-step: 20px;
 
         display: block;
 
-        animation: scale 1.75s infinite ease;
-
         border-radius: 50%;
         background-color: rgba(black, .05);
         box-shadow: inset 0 0 0 1px rgba(black, .02);
@@ -62,6 +60,12 @@ $ring-step: 20px;
 
             animation-delay: 125ms * $i;
           }
+        }
+      }
+
+      &--animated {
+        & > div {
+          animation: scalePulse 1.75s infinite ease;
         }
       }
     }
