--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -17,12 +17,12 @@
   box-sizing: border-box;
   height: 36px;
   padding: 8px 16px;
-  text-decoration: none !important;
 
   cursor: pointer;
   transition: box-shadow 200ms, background 200ms;
   text-align: center;
   vertical-align: middle;
+  text-decoration: none !important;
   text-transform: uppercase;
 
   color: rgba(0, 0, 0, .5);
@@ -81,6 +81,24 @@
       background-color: $dark-sky-blue !important;
     }
   }
+  &--pink {
+    color: white;
+    background-color: $ticklish;
+    box-shadow: 0 2px 3px 0 rgba(0, 0, 0, .1), 0 2px 8px 0 rgba(0, 0, 0, .15);
+    &:hover,
+    &:focus {
+      background-color: lighten($ticklish, 5);
+    }
+    &:active {
+      background-color: lighten($ticklish, 7);
+      box-shadow: 0 3px 6px 0 rgba(0, 0, 0, .2), 0 4px 10px 0 rgba(0, 0, 0, .1);
+    }
+    &[disabled] {
+      color: white !important;
+      background-color: $ticklish !important;
+    }
+  }
+
   &--flat {
     color: $dark-sky-blue;
     background-color: rgba($dark-sky-blue, .15);
@@ -114,23 +132,23 @@
       color: $apple !important;
       background-color: rgba($apple, .15) !important;
     }
-
   }
   &--outline {
-    box-shadow: inset 0 0 0 2px rgba(white, .3);
     color: white;
     border-radius: 3px;
+    box-shadow: inset 0 0 0 2px rgba(white, .3);
     &:hover {
       box-shadow: inset 0 0 0 2px rgba(white, .6);
     }
   }
+
   &--icon {
     line-height: 1px;
 
     min-width: 0;
     padding: 6px;
 
-    color: rgba(0, 0, 0, .25);
+    color: rgba(black, .25);
     border-radius: 50%;
     i {
       font-size: 24px;
@@ -141,6 +159,46 @@
       margin: 0;
     }
   }
+  &--square {
+    padding: 8px 0;
+
+    text-align: center;
+
+    opacity: .8;
+    i {
+      font-size: 24px !important;
+      line-height: 24px;
+
+      display: block;
+
+      margin: 0;
+    }
+
+    span {
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 16px;
+
+      display: inline-block;
+
+      margin-top: 8px;
+
+      text-transform: lowercase;
+    }
+    &:hover,
+    &:active,
+    &:focus {
+      opacity: 1;
+      background-color: transparent !important;
+    }
+
+    &[disabled] {
+      cursor: not-allowed !important;
+
+      opacity: .6 !important;
+      color: rgba(0, 0, 0, .5) !important;
+    }
+  }
 
   &--wide {
     width: 100%;
@@ -149,6 +207,6 @@
   &[disabled] {
     cursor: not-allowed;
 
-    opacity: .55;
+    opacity: .3;
   }
 }
