--- a/src/styles/call.scss
+++ b/src/styles/call.scss
@@ -49,6 +49,9 @@ $ring-step: 20px;
         border-radius: 50%;
         background-color: rgba(black, .05);
         box-shadow: inset 0 0 0 1px rgba(black, .02);
+        animation: scalePulse 1.75s infinite ease;
+        animation-fill-mode: forwards;
+        animation-play-state: paused;
         @for $i from 1 through 3 {
           &:nth-child(#{$i}) {
             z-index: 10 - $i;
@@ -65,7 +68,9 @@ $ring-step: 20px;
 
       &--animated {
         & > div {
-          animation: scalePulse 1.75s infinite ease;
+          // animation: scalePulse 1.75s infinite ease;
+          // animation-fill-mode: forwards;
+          animation-play-state: running;
         }
       }
     }
@@ -83,9 +88,17 @@ $ring-step: 20px;
 
   &__controls {
     text-align: center;
-    .button {
-      max-width: 250px;
-      margin-bottom: 8px;
+    &__icons {
+      margin-bottom: 16px;
+      .button {
+        height: auto;
+      }
+    }
+    &__buttons {
+      .button {
+        max-width: 250px;
+        margin-bottom: 8px;
+      }
     }
   }
 }
