--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -47,6 +47,7 @@ $dusky-blue: #425d7d;
 $cloudy-blue: #d6dce3;
 $light-grey-blue: #a5bedc;
 $pale-grey: #f5f6f7;
+$ticklish: #e77979;
 
 // Body
 $body-background-color: $bismark;
