--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -96,6 +96,11 @@ $message-timestamp-color: $message-state-color;
 $message-service-text-color: rgba($mine-shaft, .5);
 $message-document-icon-size: 64px;
 
+// Call
+$call-background: #2a384a;
+$call-color: #e3e5e7;
+$call-color-hover: #fff;
+
 // Modal
 $modal-default-width: 300px;
 $modal-default-background: rgb(255, 255, 255);
