--- a/src/styles/toolbar.scss
+++ b/src/styles/toolbar.scss
@@ -16,6 +16,14 @@
   color: $toolbar-text-color;
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, .04);
 
+  &__calling {
+    background-color: $call-background;
+    color: $call-color;
+    .button--icon {
+      color: $call-color;
+    }
+  }
+
   &__peer {
     overflow: hidden;
 
