--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -98,8 +98,9 @@ $message-document-icon-size: 64px;
 
 // Call
 $call-background: #2a384a;
-$call-color: #e3e5e7;
-$call-color-hover: #fff;
+$call-title-color: #e3e5e7;
+$call-button-color: rgb(147, 155, 164);
+$call-button-color-hover: white;
 
 // Modal
 $modal-default-width: 300px;
