--- a/src/styles/call.scss
+++ b/src/styles/call.scss
@@ -11,11 +11,24 @@ $ring-step: 20px;
 }
 
 .call {
-  padding-right: 16px;
+  padding: 0;
 
   &__container {
+    padding: 16px;
     background-color: $call-background;
-    color: $call-color;
+  }
+
+  &__info {
+    padding-left: 24px;
+    div {
+      box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.075);
+      &:last-child {
+        box-shadow: none;
+      }
+    }
+    .title {
+      color: $greyish-brown;
+    }
   }
 
   &__header {
@@ -30,16 +43,17 @@ $ring-step: 20px;
 
   &__body {
     text-align: center;
+    margin-top: 24px;
   }
 
 
   &__avatar {
     position: relative;
 
-    margin-bottom: 16px;
     padding: 16px;
     .avatar {
       z-index: 15;
+      box-shadow: 0 0 0 1px white;
     }
     &__rings {
       & > div {
@@ -78,22 +92,22 @@ $ring-step: 20px;
     font-size: 24px;
     font-weight: 400;
     line-height: 32px;
+    color: $call-title-color;
 
     margin: 36px 8px 24px;
   }
 
   &__controls {
     text-align: center;
+    padding: 0 16px;
     &__icons {
       margin-bottom: 16px;
       .button {
         height: auto;
-        color: $call-color;
-        transition: color 0.3s;
-        cursor: pointer;
+        color: $call-button-color;
 
         &:hover {
-          color: $call-color-hover
+          color: $call-button-color-hover
         }
       }
     }
