--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -101,6 +101,8 @@ $call-background: #2a384a;
 $call-title-color: #e3e5e7;
 $call-button-color: rgb(147, 155, 164);
 $call-button-color-hover: white;
+$call-rings-size: 120px;
+$call-rings-step: 20px;
 
 // Modal
 $modal-default-width: 300px;
