--- a/src/styles/avatar.scss
+++ b/src/styles/avatar.scss
@@ -22,6 +22,7 @@
   box-shadow: 0 0 1px rgba(0, 0, 0, .1);
 
   &__image {
+    pointer-events: none;
     position: absolute;
     z-index: 1;
     top: 0;
