--- a/src/styles/vendor.scss
+++ b/src/styles/vendor.scss
@@ -1,4 +1,4 @@
 @import 'normalize.css/normalize';
 @import 'flexboxgrid/dist/flexboxgrid.min';
-//@import 'highlight.js/styles/default';
+@import 'highlight.js/styles/default';
 @import 'jsonlylightbox/css/lightbox.scss';
