fix(web): don't select text on sidebar items when context menu is showing, fix cursor changing on sidebar items

--- a/src/styles/avatar.scss
+++ b/src/styles/avatar.scss
@@ -22,7 +22,6 @@
   box-shadow: 0 0 1px rgba(0, 0, 0, .1);
 
   &__image {
-    pointer-events: none;
     position: absolute;
     z-index: 1;
     top: 0;
@@ -30,6 +29,8 @@
 
     width: 100%;
     height: 100%;
+
+    pointer-events: none;
 
     border-radius: 100%;
   }
@@ -43,7 +44,7 @@
     width: $default-avatar-size - 2px;
     height: $default-avatar-size - 2px;
 
-    cursor: default;
+    // cursor: default;
     text-align: center;
     text-transform: uppercase;
 
