--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -712,6 +712,8 @@ $sticker-max-size: 180px;
 
     .hljs {
       background-color: transparent;
+      margin: 0;
+      padding: 0;
     }
   }
   .photo {
@@ -766,7 +768,7 @@ $sticker-max-size: 180px;
       color: rgba(0, 0, 0, .2);
       border-radius: $default-border-radius;
       background-color: white;
-      box-shadow: 0 0 0 1px rgba($body-base-color, .1);
+      border: 1px solid rgba($body-base-color, .1);
       i {
         line-height: $message-document-icon-size;
       }
